---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
<<<<<<< HEAD
"  Thinking (0s • Esc to interrupt)      "
"▌ Ask Codex to do anything              "
=======
"• Thinking (0s • esc to interrupt)      "
"› Ask Codex to do anything              "
>>>>>>> upstream/main
